############################################################################

INCLUDES = -I$(top_builddir)/../src -I$(top_srcdir)/../src

BUILT_SOURCES = pointlightmanip.cpp

noinst_PROGRAMS = pointlightmanip

pointlightmanip_SOURCES = pointlightmanip.cpp

############################################################################
